# robot-framework-demo

./: .gitignore  AGENTS.md  CI_CD_SETUP.md  INDEX.md  Makefile  NOTES.md  QUICKSTART.md  README.md  START_HERE.txt  TECHNICAL_DOCUMENTATION.md  config.py  delete_logs_results.bat  examples.py  mock_server.py  mqtt_broker.py  pyproject.toml  quickstart.py  robot.yaml  run.bat  setup_project.py
_old/libraries/: automotive_listener.py  mqtt_vehicle_network.py
_old/mock_servers/: dispatch_rest_server.py  vehicle_service_server.py
_old/resources/: dispatch_keywords.resource  mqtt_keywords.resource  vehicle_service_keywords.resource
_old/tests/bonus/: smoke_tests.robot
docs/: CONVENTION_VS_CUSTOM.md
docs/archive/: CI_CD_SETUP.md  COMPLETION_CHECKLIST.md  CONVENTION_VS_CUSTOM.md  QUICKSTART.md  SUMMARY.md  TECHNICAL_DOCUMENTATION.md
libraries/: __init__.py  appium_vehicle_ui.py  automotive_lib.py  automotive_listener.py  mqtt_vehicle_network.py  rest_dispatch_api.py  rest_ecu_api.py  rest_vehicle_service_api.py
mock_servers/: ecu_rest_server.py  mqtt_broker_helper.py
resources/: mqtt_keywords.resource  rest_ecu_keywords.resource  vehicle_keywords.resource  vehicle_signals.dbc
tests/: database_sqlite_example.robot  integration_tests.robot  network_stack.robot  smoke_tests.robot
tests/bonus/: integration_tests.robot  smoke_tests.robot
variables/: __init__.py  config.py
