[project]
name = "automotive-test-framework"
version = "1.0.0"
description = "Automotive testing framework with Robot Framework and Python 3.12"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "robotframework>=7.0",
    "cantools>=4.0",
    "python-can>=4.0",
]

[project.optional-dependencies]
automotive = [
    "paho-mqtt>=1.6",                           # MQTT client (vehicle network)
    "amqtt>=0.11",                              # Embedded MQTT broker (no Mosquitto install)
    "requests>=2.28",                           # REST API client
    "robotframework-requests>=0.9",             # Robot REST library
    "flask>=2.3",                               # Mock ECU REST API
    "flask-cors>=4.0",                          # CORS for APIs
]

dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# Robot layout: only `libraries` and `variables` are Python packages; `resources` and
# `mock_servers` are data/scripts and must not be auto-discovered as packages.
[tool.setuptools.packages.find]
where = ["."]
include = ["libraries*", "variables*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
